# minecraft-server-bindings-rs

./: Cargo.toml  README.md
generator/: Cargo.toml
generator-bin/: Cargo.toml
generator-bin/src/: main.rs
generator/src/: generator.rs  lib.rs  schema.rs
generator/src/types/: mod.rs  primitive.rs  varint.rs
minecraft-server-protocol/: Cargo.toml
minecraft-server-protocol/generator/: Cargo.toml
minecraft-server-protocol/generator/src/: generator.rs  main.rs  schema.rs
minecraft-server-protocol/minecraft-server-protocol-derive/: Cargo.toml
minecraft-server-protocol/minecraft-server-protocol-derive/src/: lib.rs
minecraft-server-protocol/src/types/: array.rs  field.rs  mod.rs  nbt.rs  packet.rs  varint.rs
minecraft-server-protocol/src/v17w50a/: login.rs  mod.rs  play.rs
minecraft-server-protocol/src/v1_12/: login.rs  mod.rs  play.rs
minecraft-server-protocol/src/v1_12_1/: login.rs  mod.rs  play.rs
minecraft-server-protocol/src/v1_12_2/: mod.rs  play.rs  status.rs
minecraft-server-protocol/src/v1_13/: mod.rs  play.rs
minecraft-server-protocol/src/v1_13_1/: mod.rs  play.rs
minecraft-server-protocol/src/v1_13_2/: mod.rs  play.rs
minecraft-server-protocol/src/v1_13_2_pre1/: mod.rs  play.rs
minecraft-server-protocol/src/v1_13_2_pre2/: mod.rs  play.rs
minecraft-server-protocol/src/v1_14/: mod.rs  play.rs
packets/: Cargo.toml  README.md
packets/packet-derive/: Cargo.toml
packets/packet-derive/src/: lib.rs
packets/src/: lib.rs
packets/src/types/: array.rs  field.rs  mod.rs  packet.rs  position.rs  primitive.rs  string.rs
packets/src/v15w40b/: play.rs
packets/src/v16w20a/: play.rs
packets/src/v16w35a/: play.rs
packets/src/v17w50a/: play.rs
packets/src/v1_10_pre1/: play.rs
packets/src/v1_11/: play.rs
packets/src/v1_12/: play.rs
packets/src/v1_12_1/: login.rs  play.rs
packets/src/v1_12_2/: play.rs
packets/src/v1_13/: play.rs
packets/src/v1_13_1/: play.rs
packets/src/v1_13_2/: mod.rs  play.rs
packets/src/v1_13_2_pre1/: login.rs  play.rs
packets/src/v1_13_2_pre2/: mod.rs  play.rs
packets/src/v1_14/: play.rs
packets/src/v1_14_1/: play.rs
packets/src/v1_14_3/: play.rs
packets/src/v1_14_4/: mod.rs  play.rs
packets/src/v1_15/: play.rs
packets/src/v1_15_1/: play.rs
packets/src/v1_15_2/: mod.rs  play.rs
packets/src/v1_16/: mod.rs  play.rs
packets/src/v1_16_1/: play.rs
packets/src/v1_16_2/: play.rs
packets/src/v1_16_rc1/: handshaking.rs  play.rs  status.rs
packets/src/v1_17/: play.rs
packets/src/v1_9/: play.rs
packets/src/v1_9_1_pre2/: play.rs
packets/src/v1_9_4/: play.rs
packets/src/v20w13b/: login.rs  mod.rs  play.rs
packets/src/v21w07a/: play.rs
src/: generator.rs  lib.rs  schema.rs
src/types/: array.rs  field.rs  position.rs  primitive.rs  string.rs  varint.rs
(+37 files in other folders)
