[package]
name = "protocol-gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.6", features = ["serde"] }

async-trait = "0.1"
async-std = "1.9"
thiserror = "1.0"
displaydoc = "0.2"
Inflector = "0.11"

[dev-dependencies]
futures-await-test = "0.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
