[package]
name = "packets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packet-derive = { path = "packet-derive" }
cfg-if = "1.0"
async-trait = "0.1"
async-std = "1.9"
log = "0.4"
thiserror = "1.0"
displaydoc = "0.2"

[dev-dependencies]
futures-await-test = "0.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"

[features]
default = ["latest"]
latest = ["v1-17"]

v1-17 = []
v21w07a = []
v1-16-2 = []
v1-16-1 = []
v1-16 = []
v1-16-rc1 = []
v20w13b = []
v1-15-2 = []
v1-15-1 = []
v1-15 = []
v1-14-4 = []
v1-14-3 = []
v1-14-1 = []
v1-14 = []
v1-13-2 = []
v1-13-2-pre2 = []
v1-13-2-pre1 = []
v1-13-1 = []
v1-13 = []
v17w50a = []
v1-12-2 = []
v1-12-1 = []
v1-12 = []